Fix tenant_migration_state_machine_idl compile error on NoSSL variant

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Sharding 2021-01-11
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      tenant_migration_state_machine_idl is failing to compile on NoSSL variant with 

      src/mongo/db/repl/tenant_migration_util.h:104: error: undefined reference to 'mongo::ssl_util::findPEMBlob(mongo::StringData, mongo::StringData, unsigned long, bool)'
      src/mongo/db/repl/tenant_migration_util.h:110: error: undefined reference to 'mongo::ssl_util::findPEMBlob(mongo::StringData, mongo::StringData, unsigned long, bool)'
      

            Assignee:
            Cheahuychou Mao
            Reporter:
            Cheahuychou Mao
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: