SERVER-53577 Fix tenant_migration_state_machine_idl compile error on NoSSL variant